--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
 <form action="{{ url_for('login') }}" method="POST">
   {{ form.hidden_tag() }}
   <div class="mb-3">
-    {{ form.username.label(class="form-label") }} {{
-    form.username(class="form-control") }}
+    {{ form.user_name.label(class="form-label") }} {{
+    form.user_name(class="form-control") }}
   </div>
 
   <div class="mb-3">
